# linkedin-job-finder

./: .gitignore  .linkedin-jobs.env.example  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DESIGN_FEW_SHOT.md  LICENSE  README.md  SECURITY.md  backfill_source.py  com.eliran.linkedinjobs.plist  corpus_ctl.py  defaults.json  onboarding_ctl.py  phase_d_test.py  probe_guest_api.py  probe_guest_detail.py  profile_ctl.py  pyproject.toml  requirements.txt  run.sh  scheduler_ctl.py  search.py  send_email.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
backend/: requirements.txt  run.py  search.py  send_email.py
backend/ctl/: _common.py  config_suggest_ctl.py  corpus_ctl.py  cv_extract_ctl.py  llm_ctl.py  notifications_ctl.py  onboarding_ctl.py  preflight_ctl.py  profile_ctl.py  scheduler_ctl.py
backend/ctl/scheduler/: __init__.py  base.py  launchd.py  schtasks.py  systemd_user.py
backend/launchd/: run.sh
backend/llm/: __init__.py  _shared.py  base.py  claude_cli.py  claude_sdk.py  gemini.py  ollama.py  openai.py  openrouter.py
backend/probes/: debug_query.py  probe_guest_api.py  probe_guest_detail.py
backend/tests/: conftest.py  notifications_ctl_test.py  phase_d_test.py  test_ctl_corpus.py  test_ctl_cv_extract.py  test_ctl_llm.py  test_ctl_preflight.py  test_ctl_profile.py  test_ctl_scheduler.py  test_llm.py  test_scheduler_backends.py  test_search.py
backend/tools/: backfill_category_name.py  backfill_scored_at.py  rescue_unscored.py
ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
ui/middleware/: http.ts  paths.ts  runCtl.ts
ui/public/: defaults.json
ui/src/: AddManualModal.tsx  App.tsx  ApplicationsPage.tsx  BulkActionBar.tsx  CategoryManager.tsx  ChipInput.tsx  ConfigPage.tsx  ConfigSuggestModal.tsx  CorpusPage.tsx  Dot.tsx  FilterPanel.tsx  JobActionsPopover.tsx  JobsTable.tsx  OnboardingPage.tsx  ProfileSwitcher.tsx  RatingCommentEditor.tsx  RunHistoryPage.tsx  SchedulerCard.tsx  ScrapeRunPanel.tsx  StatsBar.tsx  api.test.ts  api.ts  configMigrate.test.ts  configMigrate.ts  configTypes.ts  filters.test.ts  filters.ts  hooks.test.ts  hooks.ts  index.css  main.tsx  runHistoryTypes.ts  types.ts  useViewport.ts
ui/src/__tests__/: msw.ts  setup.ts
ui/src/applications/: AppDetailModal.tsx  constants.ts
ui/src/onboarding/: components.tsx  types.ts
ui/src/onboarding/steps/: Step0Preflight.tsx  Step1LLM.tsx  Step2Geo.tsx  Step3Mode.tsx  Step4CV.tsx  Step5Intent.tsx  Step6Generate.tsx  Step6Notifications.tsx  Step7WhatsNext.tsx
