[project]
name = "linkedin-job-finder"
version = "0.0.0"
description = "Personalized LinkedIn job scraper with LLM scoring."
requires-python = ">=3.10"
# Runtime deps live in backend/requirements.txt — keep them in lock-step there
# so a fresh clone keeps working with `pip install -r backend/requirements.txt`.
# We do NOT mirror them here because the project is run as scripts, not
# installed as a package, and duplicating would invite drift.

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    # Test runner. Pinned to >=8 — that's where pytest-mock 3.x's `mocker.patch.object`
    # fast-path landed and where `pytest.MonkeyPatch` became a stable public symbol.
    "pytest>=8.0",
    # mocker fixture — readable mocks vs nested with-monkeypatch ladders.
    "pytest-mock>=3.14",
    # Coverage report so contributors see the unit-test surface area shrink/grow.
    "pytest-cov>=5.0",
    # Mocks `requests` HTTP calls the LLM providers + guest scraper make. v0.25+
    # works with requests >=2.31 (pinned via runtime requirements). responses is
    # the canonical equivalent of MSW for Python's `requests` stack.
    "responses>=0.25",
    # Freezes datetime.now() so feedback-example timestamps + scored_at are stable
    # in golden-output assertions.
    "freezegun>=1.5",
]

# ---------- ruff ----------------------------------------------------------
# Strict-but-pragmatic config. We bias toward bug-finders and modernizers
# (pyupgrade, simplify, return) plus tidy imports (I) and naming (N). Rules
# that produce too much noise on the existing codebase are silenced per-file
# rather than globally — every silencing carries a comment.
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "ui/node_modules",
    "ui/dist",
    "ui/public",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "N",    # naming
    "ARG",  # unused-arguments
    "PTH",  # use pathlib
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "TRY",  # tryceratops (exception handling)
]
ignore = [
    # The codebase deliberately uses broad excepts in many top-level CLI
    # entrypoints to convert any failure into a JSON envelope. Tightening
    # would add noise without value.
    "BLE001",
    # Function naming sometimes embeds intent (e.g. _GENERIC_FALLBACK_*); we
    # keep the existing snake_case style and don't enforce mixedCase rules.
    "N802", "N803", "N806",
    # Some long literal lines (URLs, regex, embedded JS) blow the line cap
    # without benefit from wrapping.
    "E501",
    # Tryceratops is opinionated about message length / EM strings — keep the
    # existing readable error messages.
    "TRY003", "TRY300", "TRY301", "TRY400", "TRY401",
    # The codebase deliberately uses en-dashes in docstrings/comments for
    # numeric ranges (e.g. "8–12 digits") and parenthetical asides — they
    # render correctly in IDEs and aren't ambiguous in context.
    "RUF002", "RUF003",
    # Allow `print()` for the CLI tools — they intentionally write to stdout.
    # Not in default select, listed here for clarity if anyone enables T20.
]

[tool.ruff.lint.per-file-ignores]
# Test runner is a long script intentionally — don't enforce structure here.
# E402: section-by-section imports interleaved with `section()` calls are a
#       deliberate readability choice in phase_d_test.py.
# E741: single-letter loop vars in throwaway list comps.
# F811: re-imports of importlib in functions that read fresh module state.
"backend/tests/*.py" = [
    "B", "ARG", "SIM", "RUF", "PTH", "TRY", "RET",
    "E402", "E741", "F401", "F811",
]
# Scheduler scripts are CLI entrypoints; ARG warnings on `_args` parser
# callbacks are intentional.
"backend/ctl/*.py" = ["ARG001"]
# Tools sometimes need top-level prints + relative path patterns.
"backend/tools/*.py" = ["PTH", "TRY", "RET"]
# Probes are diagnostic-only; loose rules.
"backend/probes/*.py" = ["B", "ARG", "SIM", "PTH", "TRY", "RET"]

[tool.ruff.format]
# Defaults are fine — 88-char-ish reflow is overridden by line-length above.

# ---------- mypy ---------------------------------------------------------
# Strict-on-defs (every function must be typed) but not strict-on-everything.
# Untyped third-party libs (playwright, bs4, requests) are silenced module-wide.
[tool.mypy]
python_version = "3.10"
# `backend` lives at the repo root and is imported both as `backend.search`
# (when called via `python3 -m`) and as bare `search` (when ctl scripts
# `sys.path.insert(0, BACKEND)`). explicit_package_bases tells mypy to treat
# the repo root as a namespace package source root and silences the
# "found twice under different module names" duplicate-module error.
explicit_package_bases = true
# Roots where mypy looks for modules. The repo root resolves `backend.*`;
# `backend/ctl` resolves the bare-name `_common` import the ctl scripts do
# via sys.path shims.
mypy_path = ".:backend/ctl"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = false
# Tests + probes are scripts, not library code — soften.
exclude = [
    "backend/tests/",
    "backend/probes/",
]

[[tool.mypy.overrides]]
# Third-party libs without type stubs. We don't ship .pyi files for them and
# don't want to install -types packages just for stubs.
module = [
    "playwright.*",
    "bs4",
    "requests",
    "filelock",
    "pypdf",
    "winreg",
    "anthropic",
    "anthropic.*",
    # Bare-name `search` import done by ctl/corpus_ctl.py via sys.path shim —
    # mypy can't follow the runtime path manipulation. The `backend.search`
    # alias still gets full type checking via the strict global config.
    "search",
    # Same story for the local `scheduler` package (backend/ctl/scheduler/).
    "scheduler",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# CLI entrypoints (backend/ctl/, backend/tools/, backend/run.py, backend/send_email.py).
# Their public surface is JSON envelopes on stdout, not typed function signatures —
# argparse-driven cmd_* handlers all return None and don't benefit from explicit
# annotation. Library code (backend/search.py, backend/llm/*) keeps strict mode.
#
# Bare-name aliases below (without the `backend.` prefix) cover the case where
# mypy resolves a ctl script via its `mypy_path = "backend/ctl"` root rather
# than via the package path — both spellings refer to the same files.
module = [
    "backend.ctl.*",
    "backend.tools.*",
    "backend.run",
    "backend.send_email",
    "scheduler_ctl",
    "onboarding_ctl",
    "profile_ctl",
    "corpus_ctl",
    "preflight_ctl",
    "llm_ctl",
    "config_suggest_ctl",
    "cv_extract_ctl",
    "rescue_unscored",
    "backfill_category_name",
]
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
# search.py uses dynamic module-level globals that mutate at load_config() time
# (SEARCH_QUERIES / CATEGORIES / etc.). The legacy `_atomic_merge_json` callback
# style passes around untyped mutator closures — typing them all would not pay
# for the noise. We keep the rest of the file strict via the global setting.
module = "backend.search"
disallow_untyped_calls = false

# ---------- pytest -------------------------------------------------------
# The existing phase_d_test.py is a long script (sys.exit at module level),
# NOT pytest-collectable. We restrict discovery to the standard `test_*.py`
# pattern; phase_d_test.py is still invoked directly via
# `python3 backend/tests/phase_d_test.py` by CI / the Phase D harness.
#
# Sane defaults:
#   - `--strict-markers` so a typo'd marker fails the run (no silent skips).
#   - `--strict-config` catches typos in this section (e.g. "addopt" not "addopts").
#   - `-ra` short-summary at the end for skips/xfails.
#   - `--import-mode=importlib` is pytest's modern import strategy; avoids the
#     legacy rootdir/sys.path hacks needed by the script-style phase_d harness.
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["ui", "node_modules", "dist"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
